--- a/src/css/type.scss
+++ b/src/css/type.scss
@@ -203,7 +203,7 @@ ul, .ul {
 }
 
 // Weight
-.text--light {
+.text--thin {
   font-weight: 300;
 }
 .text--regular {
